--- a/.tsconfig.json
+++ b/.tsconfig.json
@@ -6,7 +6,7 @@
   "exclude": ["node_modules"],
 
   "compilerOptions": {
-    "lib": ["es2023"],
+    "lib": ["ESNext"],
     "module": "ES2022",
     "target": "es2022",
     "sourceMap": true,
